calculator/nightmode.css
.cal{/*calculator body*/
    width: 500px;
    height:600px;
    position: absolute;
    margin:auto;
    left: 0;
    right:0;
    top:0;
    bottom:0;
    box-shadow: 0px 5px 20px #ccc;
}

#screen{/*calculator screen*/
    width: 100%;
    height:150px;
    box-shadow: 0px 5px 20px #ccc;
    overflow-y: hidden;
    background-color: #333;
    color: white;
}

.button{/*style of buttons*/
    width: 25%;
    float: left;
    font-family: Consolas;
    height: 50px;
    background-color:#333;
    font-size: 30px;
    transition: 0.2s;
    outline: none;
    box-shadow: 0px 1px 5px #000;
    border: none;
    color: #fff;
}
.greybg{/*background of high class function*/
    background-color: #333;
}
.blue{/*blue font color button*/
    color: #908b7f;
}
.equal{/*style of equal button*/
    background-color: #3eb8eb;
    color: white;
}
.sbutton{/*style of arrow button*/
    border: none;
    width: 25%;
    float: left;
    font-family: Consolas;
    height: 50px;
    color: #908b7f;
    background-color: #333;
    font-size: 30px;
    transition: 0.2s;
    outline: none;
}
.buttoncontainer{/*container of buttons*/
    width:100%;
    height: 450px;
}

@media (max-width: 767px) {
    .cal{
        width: 100%;
        height: 100%;
    }
}
/*change button's color when click*/
.button:active,.sbutton:active{
    background-color: #666;
}

.button:visited,.sbutton:visited{
    background-color: #333;
}
.equal:active{
    background-color: #00f;
}
#above{/*calculate screen*/
    width: 90%;
    height: 80px;
    text-align: right;
    font-size: 50px;
    padding-left: 5%;
    padding-right: 5%;
    padding-top: 10px;
    overflow-x: auto;
    transition: 0.2s;
    white-space: nowrap;
}
@media(max-width: 767px){
    #above{
        margin-top: 50px;
    }
}

#bottom{/*result screen*/
    width: 90%;
    height: 40px;
    text-align: right;
    font-size: 30px;
    padding-left: 5%;
    padding-right: 5%;
    overflow-x: auto;
    color: #ccc;
    transition: 0.2s;
}

@media (max-width: 330px) {
    #above,#bottom{
        margin-top: 0;
    }
}
::-webkit-scrollbar{width: 0px}

